--- a/index2.html
+++ b/index2.html
@@ -546,10 +546,12 @@
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
+      
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+      </div>
+      
+      <div class="text-center small mt-20">
+        Part of Altcademy's Fullstack Program <a href="https://www.altcademy.com/">www.altcademy.com</a>
       </div>
     </div>
 
