--- a/index2.html
+++ b/index2.html
@@ -544,7 +544,7 @@
       <div class="copyright text-center ">
         <p>© <span>Copyright</span> <strong class="px-1 sitename">Personal Portfolio</strong> <span>All Rights Reserved</span></p>
       </div>
-      <div class="credits">
+      <div class="credits"></div>
         <!-- All the links in the footer should remain intact. -->
       
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
